04Dec02=======================================================================
1. updated sh/log to allow searching for more arbitrary strings such as IP
addresses
08Nov02=======================================================================
1. update Keps.pm to reflect which satellites now come round in the weekly
updates. I suggest that you copy this file to /spider/local and do a load/kep
and you should lose all the 'old' satellites (eg MIR).
08Nov02=======================================================================
1. made some small mods to grepdbg and spot2csv.pl
2. fix a possible DOS in dx command
07Nov02=======================================================================
1. allow three digit longitudes
2. make a small change to see if messages now stay in place.
3. make keep actually stick over a reboot and take it fully into account for
deletions (translators: I added m18).
4. try not to delete new messages (even if this is an update that reads 'old'
messages with missing fields).
29Oct02=======================================================================
1. make sh/log et al a bit more efficient.
2. fix dupe message in dx.
3. update cty.dat to the latest, add k8T, K8O to KH8 and TX5BTY to FO/A
4. clear cache on reload of prefixes
25Oct02=======================================================================
1. remove the dupefile automatically if it becomes corrupted
2. instrument the startup slightly more
21Oct02=======================================================================
1. Fix msg aging.
2. make the default pinginterval and obscount variable (set/var 
$DXProt::pingint and $DXProt::obscount) 
20Oct02=======================================================================
1. remove dupe check on local sysop announces
2. fix format errors on sh/muf for 5.8.0
3. add new version of the administration manual that includes WinCVS with
thanks to K1XX (g0vgs).
17Oct02=======================================================================