@@ -5,13 +5,55 @@
 #
 # $Id$
 #
+# Modified on 2002/10/29 by K1XX for his own use
+# Valid inputs:
+#
+# sh/hfstats
+#
+# sh/hfstats <date> <no. of days>
+#
+# Known good data formats
+# dd-mmm-yy
+# 24-Nov-02 (using - . or / as separator)
+#
+# mm-dd-yy
+# 11/24/02 (using - . or / as separator)
+#
+# yymmdd
+# 021124
+#
+
+use Date::Parse;
 
 my ($self, $line) = @_;
 my @f = split /\s+/, $line;
 my $days = 31;
-my $now = Julian::Day->new(time())->sub(31);
 my $i;
 my @in;
+my $now;
+my $date = cldate($main::systime);
+my $utime = $main::systime;
+my @out;
+
+while (@f) {
+	my $f = shift @f;
+
+	if ($f =~ /^\d+$/ && $f < 366) {		# no of days
+		$days = $f;
+		next;
+	}
+	if (my $ut = Date::Parse::str2time($f)) {	# is it a parseable date?
+		$utime = $ut+3600;
+		next;
+	}
+	push @out, $self->msg('e33', $f);
+}
+
+return (1, @out) if @out;
+
+$now = Julian::Day->new($utime);
+$now = $now->sub($days);
+$date = cldate($utime);
 
 # generate the spot list
 for ($i = 0; $i < $days; $i++) {
@@ -32,10 +74,9 @@ for ($i = 0; $i < $days; $i++) {
 	$now = $now->add(1);
 }
 
-my @out;
 my @tot;
 
-push @out, $self->msg('stathf', cldate(time));
+push @out, $self->msg('stathf', $date, $days);
 push @out, sprintf "%6s|%6s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|", qw(Date Total 160m 80m 60m 40m 30m 20m 17m 15m 12m 10m);
 foreach my $ref (@in) {
 	my $linetot = 0;
