@@ -9,9 +9,32 @@
 my ($self, $line) = @_;
 my @f = split /\s+/, $line;
 my $days = 31;
-my $now = Julian::Day->new(time())->sub(31);
 my $i;
 my @in;
+my $now;
+my $date = cldate($main::systime);
+my $utime = $main::systime;
+my @out;
+
+while (@f) {
+	my $f = shift @f;
+
+	if ($f =~ /^\d+$/ && $f < 366) {		# no of days
+		$days = $f;
+		next;
+	}
+	if (my $ut = Date::Parse::str2time($f)) {	# is it a parseable date?
+		$utime = $ut+3600;
+		next;
+	}
+	push @out, $self->msg('e33', $f);
+}
+
+return (1, @out) if @out;
+
+$now = Julian::Day->new($utime);
+$now = $now->sub($days);
+$date = cldate($utime);
 
 # generate the spot list
 for ($i = 0; $i < $days; $i++) {
@@ -32,10 +55,9 @@ for ($i = 0; $i < $days; $i++) {
 	$now = $now->add(1);
 }
 
-my @out;
 my @tot;
 
-push @out, $self->msg('statvhf', cldate(time));
+push @out, $self->msg('statvhf', $date, $days);
 push @out, sprintf "%11s|%6s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|%5s|", qw(Date Total 6m 4m 2m 70cm 23cm 13cm 9cm 6cm 3cm);
 foreach my $ref (@in) {
 	my $linetot = 0;
