@@ -86,6 +86,7 @@ package DXM;
 				e30 => 'Cannot Open $_[0] $!',
 				e31 => '$_[0] is not a user', 
 				e32 => 'Need a passphrase',
+				e33 => '$_[0] is not a number of days or a valid date',
 
 				echoon => 'Echoing enabled',
 				echooff => 'Echoing disabled',
@@ -256,11 +257,11 @@ package DXM;
 				sqra => 'Cluster QRA Locator$_[0], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
 				sorry => 'Sorry',
 				spf1 => 'spoof: creating new user $_[0]',
-				stathf => 'HF DX Spot Stats, last 31 days from $_[0]',
-				stathft => 'HF DX Spot Stats, last 31 days from $_[1] for DXCC $_[0]',
-				statvhf => 'VHF+ DX Spot Stats, last 31 days from $_[0]',
-				statvhft => 'VHF+ DX Spot Stats, last 31 days from $_[1] for DXCC $_[0]',
-				statdx => 'Total DX Spots last 31 days',
+				stathf => 'HF DX Spot Stats, last $_[1] days from $_[0]',
+				stathft => 'HF DX Spot Stats, last $_[2] days from $_[1] for DXCC $_[0]',
+				statvhf => 'VHF+ DX Spot Stats, last $_[1] days from $_[0]',
+				statvhft => 'VHF+ DX Spot Stats, last $_[2] days from $_[1] for DXCC $_[0]',
+				statdx => 'Total DX Spots for $_[1] days from $_[0]',
 				sun => 'Location                              dd/mm/yyyy Rise   Set',
 				sun_with_azel => 'Location                              dd/mm/yyyy Rise   Set      Azim   Elev',
 				susdb1 => 'usage: callsign state city',
